--- a/UniversityLibrary/Base.lproj/Main.storyboard
+++ b/UniversityLibrary/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -111,7 +112,7 @@
                             <constraint firstItem="1Ct-6W-uzn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="fCq-hr-XPp"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="k3r-9P-Lpr"/>
+                    <navigationItem key="navigationItem" id="4o6-BE-whV"/>
                     <connections>
                         <outlet property="emailTextField" destination="ttY-oo-ROF" id="Ac9-cN-t2W"/>
                         <outlet property="passwordTextField" destination="nEh-gs-6Mh" id="Rzj-AF-KBy"/>
