--- a/UniversityLibrary/Storyboard/Base.lproj/Patron.storyboard
+++ b/UniversityLibrary/Storyboard/Base.lproj/Patron.storyboard
@@ -151,7 +151,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of Copies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2l-ss-eRY" customClass="GeneralUILabel" customModule="UniversityLibrary" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="160" width="303" height="25"/>
+                                        <rect key="frame" x="0.0" y="160" width="303" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="rre-Lf-rbo"/>
                                         </constraints>
@@ -160,7 +160,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h2M-oT-4n3" customClass="GeneralUILabel" customModule="UniversityLibrary" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="195" width="303" height="30"/>
+                                        <rect key="frame" x="0.0" y="200" width="303" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="gSt-lt-tJP"/>
                                         </constraints>
@@ -174,32 +174,8 @@
                                     <constraint firstAttribute="height" constant="225" id="vnB-UA-fA5"/>
                                 </constraints>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="yGZ-EQ-zCh">
-                                <rect key="frame" x="46" y="437" width="283" height="130"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hne-nV-QoD" customClass="MenuUIButton" customModule="UniversityLibrary" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="283" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="vng-dm-ozh"/>
-                                        </constraints>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="15" maxY="0.0"/>
-                                        <state key="normal" title="Renew" image="renewBooksIcon"/>
-                                        <connections>
-                                            <action selector="renewBook:" destination="4ZL-i1-iTb" eventType="touchUpInside" id="U1Z-aR-NMw"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aoA-2x-lXi" customClass="MenuUIButton" customModule="UniversityLibrary" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="80" width="283" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="JiY-Df-5Hh"/>
-                                        </constraints>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="15" maxY="0.0"/>
-                                        <state key="normal" title="Return" image="returnBooksIcon"/>
-                                        <connections>
-                                            <action selector="returnBookAction:" destination="4ZL-i1-iTb" eventType="touchUpInside" id="qOd-Ar-cY5"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="yGZ-EQ-zCh">
+                                <rect key="frame" x="46" y="517" width="283" height="50"/>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeHolder" translatesAutoresizingMaskIntoConstraints="NO" id="l4Q-kM-50n">
                                 <rect key="frame" x="26" y="30" width="125" height="125"/>
@@ -694,8 +670,6 @@
         <image name="allBooksIcon" width="25" height="25"/>
         <image name="checkedOutBooksIcon" width="25" height="25"/>
         <image name="placeHolder" width="50" height="50"/>
-        <image name="renewBooksIcon" width="25" height="25"/>
-        <image name="returnBooksIcon" width="25" height="25"/>
         <image name="searchIcon" width="25" height="25"/>
     </resources>
 </document>
